Fixed sidebar's perfect-scrollbar max-height

--- a/src/assets/layout/sidebar/_sidebar-base.scss
+++ b/src/assets/layout/sidebar/_sidebar-base.scss
@@ -61,6 +61,10 @@ $sidebar-box-shadow: 7px 0 60px rgba(0, 0, 0, 0.05);
     .app-sidebar-scroll {
       width: 100%;
       height: 100%;
+
+      perfect-scrollbar {
+        max-height: calc(100vh - #{$app-header-height});
+      }
     }
   }
 
